--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
+
 #img-logo {
     height: 200px;
     width: 200px;
 }
-  #mainBody {
-    margin-top: 20px;
-  }
   header {
     background: #3a3a3a;
     width: 100%;
@@ -20,13 +18,14 @@
     padding-top: 45px;
   }
   #mainBody {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: top;
   height: 100%;
   margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 20px;
   }
   #mainBody .button {
     display: flex;
@@ -65,17 +64,35 @@
     font-size: 18px;
     background: #1a1a1a;
     text-align: center;
-    padding: 7px 0;
+    padding-top: 20px;
   }
   .tabledata:nth-of-type(2n) {
     background: #3a3a3a;
   }
-  .centered {
-    display: block;
-  }
 #table2{
   width: calc(100% - 200px);
   padding: 20px 100px;
-  background: #fff;
+  background: #eee;
   min-height: 315px;
+  margin-top: 20px;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.frameimage {
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+.tabledata th, td {
+  margin: 0% 0% 0% 0%;
+  border-color: #1a1a1a;
+  border-radius: 4px;
+  border-width: 2px;
+}
+
+.middle {
+  text-align: center;
+  padding-top: 20px;
 }
