--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
     height: 200px;
     width: 200px;
 }
-  #mainBody {
-    margin-top: 20px;
+  .techpedia{
+    padding: 10px;
+    text-align: center;
+  }
+
+  #techpedia {
+    border-radius: 6px;
   }
   header {
     background: #3a3a3a;
@@ -27,17 +32,24 @@
   height: 100%;
   margin-top: 20px;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 50px;
+  padding-left: 100px;
   }
   #mainBody .button {
     display: flex;
     flex-wrap: wrap;
-    width: calc(100% / 5);
+    width: 80%;
     text-align: center;
     justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
+    background: rgb(53, 11, 241);
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 6px;
+    height: 40px;
   }
   table {
     display: block;
@@ -79,4 +91,11 @@
   padding: 20px 100px;
   background: #fff;
   min-height: 315px;
+}
+.quote{
+  width: 100%;
+  text-align: center;
+}
+#quote {
+  padding: 20px
 }
